--- a/src/templates/forget.pug
+++ b/src/templates/forget.pug
@@ -1,1 +1,1 @@
-p #{name} você solicitou a recuperação de senha, por favor clique no link a seguir: #{link}
+p #{name} você solicitou a recuperação de senha, por favor use o token a seguir: #{token}
